--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
-    "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "generate-react-cli": "^8.4.9",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-loader-spinner": "^6.1.6",
+    "react-multi-carousel": "^2.8.6",
     "react-router-dom": "^7.5.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.17",
+    "tailwindcss": "^4.1.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
